# libsol10-compat

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  libsol10-compat.pc.in  packages
include/: Makefile.am
include/libsol10-compat/: dirent.h  endian.h  err.h  fcntl.h  libsol10-compat-config.h.in  paths.h  stdio.h  stdlib.h  string.h  strings.h  syslog.h  termios.h  time.h  unistd.h
include/libsol10-compat/sys/: feature_tests.h  file.h  random.h
m4/: ax_check_define.m4
pkgsrc/: Makefile.am
pkgsrc/libsol10-compat/: DESCR  Makefile  PLIST  buildlink3.mk
src/: Makefile.am  dirent.c  err.c  fcntl.c  stdio.c  stdlib.c  string.c  sys_file.c  sys_random.c  termios.c  time.c  unistd.c
test/: Makefile.am  test_all.c
test/data/: getdelim.data
util/: Makefile.am  libsol10_compat_patch_pkgsrc.c
