nobase_include_HEADERS = libsol10-compat/dirent.h \
	libsol10-compat/endian.h \
	libsol10-compat/err.h \
	libsol10-compat/fcntl.h \
	libsol10-compat/paths.h \
	libsol10-compat/stdio.h \
	libsol10-compat/stdlib.h \
	libsol10-compat/string.h \
	libsol10-compat/strings.h \
	libsol10-compat/syslog.h \
	libsol10-compat/sys/feature_tests.h \
	libsol10-compat/sys/file.h \
	libsol10-compat/sys/random.h \
	libsol10-compat/termios.h \
	libsol10-compat/time.h \
	libsol10-compat/unistd.h
libosconfigdir = $(includedir)/libsol10-compat
libosconfig_DATA = libsol10-compat/libsol10-compat-config.h
